; ModuleID = '/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_get_property_bool.c'
source_filename = "/home/carl/AnghaBench/mpv/player/extr_javascript.c_script_get_property_bool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MPV_FORMAT_FLAG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @script_get_property_bool to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @script_get_property_bool(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32* @jclient(i32* %6)
  store i32* %7, i32** %4, align 8
  %8 = load i32*, i32** %4, align 8
  %9 = load i32*, i32** %2, align 8
  %10 = call i32 @js_tostring(i32* %9, i32 1)
  %11 = load i32, i32* @MPV_FORMAT_FLAG, align 4
  %12 = call i32 @mpv_get_property(i32* %8, i32 %10, i32 %11, i32* %3)
  store i32 %12, i32* %5, align 4
  %13 = load i32*, i32** %2, align 8
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @pushed_error(i32* %13, i32 %14, i32 2)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %21, label %17

17:                                               ; preds = %1
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @js_pushboolean(i32* %18, i32 %19)
  br label %21

21:                                               ; preds = %17, %1
  ret void
}

declare dso_local i32* @jclient(i32*) #1

declare dso_local i32 @mpv_get_property(i32*, i32, i32, i32*) #1

declare dso_local i32 @js_tostring(i32*, i32) #1

declare dso_local i32 @pushed_error(i32*, i32, i32) #1

declare dso_local i32 @js_pushboolean(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
